Bug 39370 - RTL / LTR and right/left alignment buttons' icons should not be reversed in RTL interface
Summary: RTL / LTR and right/left alignment buttons' icons should not be reversed in R...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0 target:4.0.1
Keywords:
Depends on:
Blocks: RTL
  Show dependency treegraph
 
Reported: 2011-07-19 05:59 UTC by Dotan Cohen
Modified: 2024-08-03 09:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
RTL interface (in Hebrew) with swapped directionality icons (46.67 KB, image/png)
2011-10-17 16:52 UTC, Lior Kaplan
Details
Formatting toolbar items (LTR interface) (40.03 KB, image/png)
2011-12-20 16:47 UTC, Lior Kaplan
Details
Formatting toolbar items (RTL interface) (41.94 KB, image/png)
2011-12-20 16:47 UTC, Lior Kaplan
Details
Bullets and numbering toolbar (LTR vs. RTL comparison) (18.65 KB, image/png)
2011-12-20 16:48 UTC, Lior Kaplan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dotan Cohen 2011-07-19 05:59:09 UTC
When using an LTR interface (such as English), the RTL/LTR toolbar buttons have arrows pointing to the left (for LTR) and to the right (for RTL), which is the correct behaviour. However, when switching to an RTL interface (such as Hebrew) the buttons' icons are reversed. This is wrong, please do not swap the buttons' icons in RTL mode. Thanks.
Comment 1 Andras Timar 2011-09-23 13:42:36 UTC
Is this still an issue with current releases (3.4.3 for example)? I can't reproduce it. If so, please attach a screenshot.
Comment 2 Lior Kaplan 2011-10-17 16:52:48 UTC
Created attachment 52450 [details]
RTL interface (in Hebrew) with swapped directionality icons

It is the case in 3.4.3. Screenshot attached.
Comment 3 Dotan Cohen 2011-10-17 17:03:50 UTC
Thanks, Lior, you beat me to it.

I changed the version number back, please don't update the version number. It is used to indicate the first version that the bug was found in, not the current version of the unfixed software to be changed at each release. Thanks.
Comment 4 Lior Kaplan 2011-12-16 16:16:33 UTC
As you can see in the screenshot, the alignment buttons are also confusing - the align right button is on the left side of the align center button. They should be swap as well, even in RTL interface.
Comment 5 Michael Meeks 2011-12-20 02:12:20 UTC
So - the bug is highly unclear to me; what is the issue with the icons ? that the arrow no longer points in the direction that the text should go ?
Is this a regression ? if so, from when.
Can you reproduce this vs. 3.5 - I can't seem to get those direction buttons to show up at all with: SAL_RTL_ENABLE=1 and an English locale.
Comment 6 Lior Kaplan 2011-12-20 02:54:01 UTC
The paragraph directionality icons appear only if you turn on CTL support, which most English users don't do.

On RTL UI, the button order is usually reversed, so the the first icon would appear on the right side instead of the left side as in LTR UI.

This causes a problem in two sets of buttons:
1. The directionality buttons, which are now order counter intuitive to the icon location. You push the left icon to change the directionality to RTL.

2. The alignment icons, now have "align right" on the left side of the "align center", and "align left" on the right side of "align center". This is again counter intuitive.

This isn't a regression (same behavior for 3.4.4. and 3.5.0 beta1).

While writing this comment I noticed that this not the case for the indent increase/decrease buttons. So I'm guessing that either someone solved that problem before, or that we have an over try to solve the problem for the directionality, alignment buttons in the past which now causes different problems. An example to such solution could have been switching the buttons order or changing their icons/functionality for the RTL UI.
Comment 7 Rainer Bielefeld Retired 2011-12-20 06:20:33 UTC
<http://wiki.documentfoundation.org/BugReport_Details#Whiteboard>!

I see the effect, but why is it a bug?

If I do not think wrong  everything works in the correct and intended way, buttons change interface or indent as as they show.

But may be some improvement is  possible because because buttons are not intuitive?

A fact: the arrowkey block on my PC looks
 ↑ 
← →
 ↓

not  
 ↓
→ ←
 ↑ 

1. Situation in LTR GUI
The current way seems intuitive to me, all similar functions "to where will something be moved" (indents paragraph and numbering, ...) should work like shown with arrow key example. That's the default for these functions in LibO, it's ok for me.

Situation for LTR <-> RTL paragraph formatting is different, for me the emphasis is to "where it starts"  

               LLLLeft to right  <->  RRRRight to left
 
and from this point the way how the buttons are arranged (as in text line before) intuitive.

Al that is in accordance with Comment 6

2. Situation in RTL GUI
Switching from LTR to RTL GUI flips toolbars consequently, and for people consenting to my thoughts in 1. (at least: me) that  will mean that indents and 
Text direction icons become unintuitive.

Al that is in accordance with Comment 6

IMHO no regression, All LibO and OOo versions I checked work the same way.

@all (NEEDINFO):
Before we modify something: Are there any Help texts, Manuals, RFC, Style guides objecting the request to take out text direction and indent icons from the GUI flipping?


@Lior
I can not confirm you observation that order for indent will not flip 
with Parallel Dev-Installation of  "LibreOffice 3.5.0 Beta1 - WIN7 Home Premium (64bit) English <--> Hebrew UI [Build-ID: 7362ca8-b5a8e65-af86909-d471f98-61464c4] Windows_Release_Configuration  11-Dec-2011 06:51" when switching GUI English <-> Hebrew and back. Indent icons still are within flip. Regarding your secreenshot: did you also check LTR GUI whether indent icons really do not flip? I started my observations with a test LibO version were order of paragraph indents was opposite to LibO default (with new User Profile everything was ok), may be your icons also are not default order?
Comment 8 Lior Kaplan 2011-12-20 16:45:31 UTC
@Rainer - I'm sorry, I don't see how what you wrote is relevant...

@Michael, in addition to my previous comment which tries to explain things, I'll now also attach some screen shots, which should make sure we talk on the same things, and will let me stop using left and right a million times (:

At the moment, the order of buttons is reversed on RTL UI. See the numbering I've added to the LTR and RTL UI screen shots. For button 7-10 the icons themselves are mirrored (notice the 1 and 2 digits on button #7 are different between the toolbars). 

This mirroring, makes the arrow direction to be correct also in RTL UI. The same behavior can also be noticed in the bullets and numbering toolbar (screenshot attached).

For the text directionality and alignment, the icon itself (visually) is correct. But the icon location is counter intuitive or misleading. The RTL screenshot have red numbers which show the preferable location of these buttons (swap location of 1/3 and 5/6). This swap is the issue of this bug, and the requested fix.

I hope everything is now clear, let me know if not.
Comment 9 Lior Kaplan 2011-12-20 16:47:20 UTC
Created attachment 54613 [details]
Formatting toolbar items (LTR interface)
Comment 10 Lior Kaplan 2011-12-20 16:47:47 UTC
Created attachment 54614 [details]
Formatting toolbar items (RTL interface)
Comment 11 Lior Kaplan 2011-12-20 16:48:52 UTC
Created attachment 54615 [details]
Bullets and numbering toolbar (LTR vs. RTL comparison)

Notice that the icons are actually mirrored in RTL UI, not only in the reverse order.
Comment 12 Björn Michaelsen 2011-12-23 12:23:41 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 13 Björn Michaelsen 2011-12-23 17:00:57 UTC
needinfo keyword redundant by needinfo status.
Comment 14 Lior Kaplan 2011-12-24 06:47:30 UTC
Back to status NEW, as it happens in 3.5.0 beta2.
Comment 15 Lior Kaplan 2012-01-12 06:21:42 UTC
Notice that the icons change when switching from LTR to RTL paragraph. This happens in both LTR and RTL UI...
Comment 16 Not Assigned 2013-02-11 11:43:32 UTC
Issa Alkurtass committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2fd93f19cf6c1ce808214c659f5a4c4b10c0c441

fdo#39370 - Fixed RTL/LTR and alignment buttons location on RTL interface



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Not Assigned 2013-02-11 16:17:12 UTC
Issa Alkurtass committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b928bee03e4d311f29eaf63a11c12798559b2c9&h=libreoffice-4-0

fdo#39370 - Fixed RTL/LTR and alignment buttons location on RTL interface


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Lior Kaplan 2013-02-12 01:04:01 UTC
Verified on master, thanks for the fix.