fdo#39370 - Fixed RTL/LTR and alignment buttons location on RTL interface

Reversed the location of the RTL and LTR buttons as well as the align right
and align left buttons on the RTL interface. It now matches the LTR interface.
Done from toolboxdocumenthandler instead of modifying 20+ xml files.

Change-Id: I6b3715e134bb45a7500b87a9e926d7940690a9af
Reviewed-on: https://gerrit.libreoffice.org/2077
Reviewed-by: Tor Lillqvist <tml@iki.fi>
Tested-by: Tor Lillqvist <tml@iki.fi>